--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -4,6 +4,21 @@ project(egl C CXX)
 #set(CMAKE_C_STANDARD 11)
 #set(CMAKE_C_STANDARD_REQUIRED ON)
 
+set(DEPS_DIR "$ENV{HOME}/src/third_party")
+set(FREETYPE_SRC "${DEPS_DIR}/freetype")
+set(HARFBUZZ_SRC "${DEPS_DIR}/harfbuzz")
+
+if (NOT EXISTS "${FREETYPE_SRC}/CMakeLists.txt" OR NOT EXISTS "${HARFBUZZ_SRC}/CMakeLists.txt")
+  execute_process(
+    COMMAND bash "${CMAKE_SOURCE_DIR}/../tools/getdeps.sh" "${DEPS_DIR}"
+    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+    RESULT_VARIABLE rc
+  )
+  if (NOT rc EQUAL 0)
+    message(FATAL_ERROR "getdeps.sh failed with exit code ${rc}")
+  endif()
+endif()
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_custom_target(copy_compile_commands ALL
     COMMAND ${CMAKE_COMMAND} -E copy
@@ -37,12 +52,12 @@ set(FT_DISABLE_ZLIB TRUE CACHE BOOL "" FORCE)
 set(FT_DISABLE_BZIP2 TRUE CACHE BOOL "" FORCE)
 set(FT_DISABLE_PNG TRUE CACHE BOOL "" FORCE)
 set(FT_DISABLE_HARFBUZZ TRUE CACHE BOOL "" FORCE) # we link hb separately
-set(FREETYPE_SRC "$ENV{HOME}/src/third_party/freetype")
+
 add_subdirectory("${FREETYPE_SRC}" "${CMAKE_BINARY_DIR}/_deps/freetype-build")
 
 # HarfBuzz (enable freetype)
 set(HB_HAVE_FREETYPE TRUE CACHE BOOL "" FORCE)
-set(HARFBUZZ_SRC "$ENV{HOME}/src/third_party/harfbuzz")
+
 add_subdirectory("${HARFBUZZ_SRC}" "${CMAKE_BINARY_DIR}/_deps/harfbuzz-build")
 
 target_link_libraries(native-lib
@@ -50,11 +65,3 @@ target_link_libraries(native-lib
     harfbuzz
     android log EGL GLESv3 m
 )
-
-#find_library(log-lib log)
-#find_library(android-lib android)
-#find_library(egl-lib     EGL)
-#find_library(glesv2-lib  GLESv2)
-#find_library(m-lib       m)
-
-#target_link_libraries(native-lib ${log-lib} ${android-lib} ${egl-lib} ${glesv2-lib} ${m-lib} )
