--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.22.1)
 project(egl C CXX)
 
-#set(CMAKE_C_STANDARD 11)
-#set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -21,20 +19,14 @@ if (NOT EXISTS "${FREETYPE_SRC}/CMakeLists.txt" OR NOT EXISTS "${HARFBUZZ_SRC}/C
   endif()
 endif()
 
-#set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-add_custom_target(copy_compile_commands ALL
-    COMMAND ${CMAKE_COMMAND} -E copy
-    "${CMAKE_BINARY_DIR}/compile_commands.json"
-    "${CMAKE_SOURCE_DIR}/compile_commands.json"
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-    COMMENT "Copying compile_commands.json to source directory"
-)
-add_custom_target(copy_font ALL
-    COMMAND bash ${CMAKE_SOURCE_DIR}/../tools/copyfont.sh
-    "${CMAKE_SOURCE_DIR}/../assets"
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-    COMMENT "Copying font to assets directory"
-)
+set(FT_DISABLE_ZLIB TRUE CACHE BOOL "")
+set(FT_DISABLE_BZIP2 TRUE CACHE BOOL "")
+set(FT_DISABLE_PNG TRUE CACHE BOOL "")
+set(FT_DISABLE_HARFBUZZ TRUE CACHE BOOL "")
+set(HB_HAVE_FREETYPE TRUE CACHE BOOL "")
+add_subdirectory("${FREETYPE_SRC}" "${CMAKE_BINARY_DIR}/_deps/freetype-build")
+add_subdirectory("${HARFBUZZ_SRC}" "${CMAKE_BINARY_DIR}/_deps/harfbuzz-build")
+
 
 # Build glue directly into the shared library so ANativeActivity_onCreate is present.
 add_library(native-lib SHARED
@@ -49,19 +41,6 @@ add_library(native-lib SHARED
 target_include_directories(native-lib PRIVATE
     ${ANDROID_NDK}/sources/android/native_app_glue
 )
-add_dependencies(native-lib copy_font) #copy_compile_commands)
-
-set(FT_DISABLE_ZLIB TRUE CACHE BOOL "" FORCE)
-set(FT_DISABLE_BZIP2 TRUE CACHE BOOL "" FORCE)
-set(FT_DISABLE_PNG TRUE CACHE BOOL "" FORCE)
-set(FT_DISABLE_HARFBUZZ TRUE CACHE BOOL "" FORCE) # we link hb separately
-
-add_subdirectory("${FREETYPE_SRC}" "${CMAKE_BINARY_DIR}/_deps/freetype-build")
-
-# HarfBuzz (enable freetype)
-set(HB_HAVE_FREETYPE TRUE CACHE BOOL "" FORCE)
-
-add_subdirectory("${HARFBUZZ_SRC}" "${CMAKE_BINARY_DIR}/_deps/harfbuzz-build")
 
 target_link_libraries(native-lib
     freetype
